# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\BrandController;
+use App\Http\Controllers\Api\OrderController;
 use App\Http\Controllers\Api\TypeController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -43,4 +44,12 @@ Route::controller(BrandController::class)->prefix('brands')->group(function () {
   Route::post('/', 'store');
   Route::put('/{brand}', 'update');
   Route::delete('/{brand}', 'destroy');
+});
+
+Route::controller(OrderController::class)->prefix('orders')->group(function () {
+  Route::get('/', 'index');
+  Route::get('/{order}', 'show');
+  Route::post('/', 'store');
+  Route::put('/{order}', 'update');
+  Route::delete('/{order}', 'destroy');
 });
